...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ioM-n6-mw4">
                                <rect key="frame" x="713" y="16" width="110" height="40"/>
                                <accessibility key="accessibilityConfiguration" hint="opens settings or cancels broadcast" identifier="settingsButton" label="settings or cancel button"/>
                                <gestureRecognizers/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="110" id="727-TV-vQY"/>
                                    <constraint firstAttribute="height" constant="40" id="GHZ-lu-ZvY"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
                                <connections>
                                    <action selector="settingsButtonPressed" destination="K6j-gl-drQ" eventType="touchDown" id="jMG-U1-VGH"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDK-VQ-tMM">
                                <rect key="frame" x="393" y="333" width="110" height="40"/>
                                <accessibility key="accessibilityConfiguration" hint="begins broadcasting" identifier="pairButton" label="pair now"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="Fh5-Hr-1MD"/>
                                    <constraint firstAttribute="height" constant="40" id="vnb-4h-aoi"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Pair now"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0J-GB-gww">
                                <rect key="frame" x="713" y="16" width="110" height="40"/>
                                <accessibility key="accessibilityConfiguration" hint="returns to main view" identifier="backButton" label="back button settings"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="6a9-vv-SOq"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="cIM-nJ-6oa"/>
                                    <constraint firstAttribute="width" constant="110" id="iGV-7Q-6P2"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="xYG-5E-e7J"/>
                                </constraints>
...
